# amr-2024-team-nassar

./: .gitignore  README.md
ai/: amr_classify.ipynb  (+2 more)
literature_analysis/: README.md  literature_download.ipynb  pyproject.toml
literature_analysis/abstract_download/: literature_download.ipynb
literature_analysis/data/: abstracts_self_resistance_and_gene.csv
literature_analysis/gcp_configuration/: equivalent_code.json  equivalent_code_cmd.bash  equivalent_code_terraform.txt
literature_analysis/graphrag/: settings.yaml  text_prep.ipynb
literature_analysis/graphrag/auto_tuning/: community_report.txt  entity_extraction.txt  query.txt
literature_analysis/graphrag/output/: create_final_nodes.parquet  stats.json
literature_analysis/graphrag/ragtest/: settings.yaml
literature_analysis/graphrag_abstract/: README.md
literature_analysis/graphrag_abstract/auto_tuning/: auto_tuning_command.txt  entity_extraction_codeathon.txt  summarize_descriptions.txt
literature_analysis/graphrag_abstract/output/: create_base_documents.parquet  create_base_entity_graph.parquet  create_base_extracted_entities.parquet  create_base_text_units.parquet  create_final_communities.parquet  create_final_documents.parquet  create_final_relationships.parquet  create_summarized_entities.parquet
literature_analysis/graphrag_abstract/visualization/: graph-visualization.ipynb
literature_analysis/graphrag_result_and_discussion/: README.md  settings.yaml  text_prep.ipynb
literature_analysis/literature_download/: literature_download.ipynb
literature_analysis/llm_training/: README.md
(+6544 files in other folders)
