[tool.poetry]
name = "literature-analysis"
version = "0.1.0"
description = ""
authors = ["leroykim <leroy.kim@umbc.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.29.5"
trl = "^0.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
